--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <br>
             <label>Height(in cm)</label> 
             <input type="number" name="height" id="inp_height">
-            <input type="button" id="calculate" class="btn" onclick="calculateBMI()" value="Calculate">
+            <button type="button" id="calculate" onclick="calculateBMI()">Calculate</button>
             <table>
                 <tr>
-                    <td><input type="button" id="result" class="btn" onclick="displayResult()" value="Result"></td>
-                    <td><input type="button" id="reset" class="btn" onclick="refresh()" value="Reset"></td> 
+                    <td><button type="button" id="result" onclick="displayResult()">Result</button></td>
+                    <td><button type="button" id="reset" onclick="refresh()">Reset</button></td> 
                 </tr>
             </table>
         </form>
