--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <table>
                 <tr>
                     <td><button type="button" id="result" onclick="displayResult()">Result</button></td>
-                    <td><button type="button" id="reset" onclick="refresh()">Reset</button></td> 
+                    <td><input type="reset" id="reset" onclick="refresh()" value="Reset"></td> 
                 </tr>
             </table>
         </form>
